Commit del lock in condivisione e relativi test